--- a/frontend/src/app/features/genres/components/add-genre/add-genre.html
+++ b/frontend/src/app/features/genres/components/add-genre/add-genre.html
@@ -5,9 +5,9 @@
          <h1 class="text-5xl font-bold text-bookolive mb-5">LÄGG TILL GENRE</h1>
 
          <label for="name" class="self-center">Namn på genre:</label>
-         <input type="text" formControlName="name" class="form-text-input" id="name">
+         <input type="text" formControlName="name" class="form-text-input" id="name" #genreInput>
 
-         @if (form.get('name')?.invalid && form.get('name')?.touched) {
+         @if (form.get('name')?.invalid && formIsSubmitted) {
             @if (form.get('name')?.errors?.['required']) {
                <div></div>
                <span class="text-red-500">Genrenamn är obligatoriskt.</span>
@@ -16,7 +16,7 @@
 
          <div></div>
          <div class="flex justify-start gap-10 mt-5">
-            <app-button type="reset" (click)="resetForm()">Återställ</app-button>
+            <app-button (click)="resetForm()">Återställ</app-button>
             <app-button type="submit">Spara</app-button>
          </div>
       </div>
