--- a/frontend/src/app/features/languages/components/add-language/add-language.html
+++ b/frontend/src/app/features/languages/components/add-language/add-language.html
@@ -5,9 +5,9 @@
          <h1 class="text-5xl font-bold text-bookolive mb-5">LÄGG TILL SPRÅK</h1>
 
          <label for="name" class="self-center">Namn på språk:</label>
-         <input type="text" formControlName="name" class="form-text-input" id="name">
+         <input type="text" formControlName="name" class="form-text-input" id="name" #languageInput>
 
-         @if (form.get('name')?.invalid && form.get('name')?.touched) {
+         @if (form.get('name')?.invalid && formIsSubmitted) {
             @if (form.get('name')?.errors?.['required']) {
                <div></div>
                <span class="text-red-500">Språknamn är obligatoriskt.</span>
