--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -9,7 +9,7 @@
       
          <label for="genre">Genre:</label>
          <select formControlName="genre" id="genre">
-            @for (genre of allGenres(); track $index) {
+            @for (genre of allGenres(); track genre.id) {
                <option [ngValue]="genre.id">{{ genre.name }}</option>
             }
          </select>
@@ -19,14 +19,14 @@
       
          <label for="language">Språk:</label>
          <select formControlName="language">
-            @for (language of allLanguages(); track $index) {
+            @for (language of allLanguages(); track language.id) {
                <option [ngValue]="language.id">{{ language.name }}</option>
             }
          </select>
       
          <label for="language">Originalspråk:</label>
          <select formControlName="originalLanguage">
-            @for (language of allLanguages(); track $index) {
+            @for (language of allLanguages(); track language.id) {
                <option [ngValue]="language.id">{{ language.name }}</option>
             }
          </select>
