Skapa sida för raderade böcker (issue #79)

--- a/frontend/src/app/features/header/components/header/header.html
+++ b/frontend/src/app/features/header/components/header/header.html
@@ -2,6 +2,7 @@
    <div class="ml-20 w-1/2 flex">
       <app-burger-menu backgroundColor="backgroundbeige" class="mr-30">
          <a routerLink="/" class="text-2xl">Start</a>
+         <a routerLink="/books/deleted" class="text-2xl">Raderade böcker</a>
       </app-burger-menu>
       <a routerLink="/books" class="text-3xl text-backgroundbeige mr-30">BOKHYLLA</a>
       <a routerLink="/add" class="text-3xl text-backgroundbeige mr-30">LÄGG TILL</a>
