--- a/frontend/src/app/features/books/pages/book-page/book-page.html
+++ b/frontend/src/app/features/books/pages/book-page/book-page.html
@@ -27,8 +27,13 @@
                </div>
             </div>
 
-            <app-button (click)="openEditView()" class="min-h-0">Redigera</app-button>
-            <div class="max-w-40 h-full"></div>
+            @if (currentBook.isDeleted) {
+               <h1 class="absolute z-40 bottom-100 left-1/10 text-red-500 text-[200px] rotate-[25deg]">RADERAD</h1>
+               <app-button (click)="resetDeletedBook()">Återställ</app-button>
+            } @else {
+               <app-button (click)="openEditView()" class="min-h-0">Redigera</app-button>
+               <div class="max-w-40 h-full"></div>
+            }
          </div>
       
          <div class="h-full overflow-hidden">
