--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -3,10 +3,34 @@
    <div class="flex justify-between mt-5">
       <div class="flex">
          <div class="flex items-center justify-center">
-            <h5 class="text-3xl mr-5 text-headerbrown font-medium">sortering</h5>
-         </div>
-         <div class="flex items-center justify-center">
-            <h5 class="text-3xl mr-5 text-headerbrown font-medium">format</h5>
+            <div class="flex mr-5">
+               <h5 
+                  [cdkMenuTriggerFor]="menu"
+                  cdkMenuItem 
+                  class="example-standalone-trigger text-3xl text-headerbrown font-medium cursor-pointer"
+               >
+                  sortering: {{ sortBy().clearText }}
+               </h5>
+               @if (sortAscending()) {
+                  <i class="fa-solid fa-arrow-down text-headerbrown text-xl ml-2 mt-2 cursor-pointer" (click)="sortAscending.set(false)"></i>
+               } @else {
+                  <i class="fa-solid fa-arrow-up text-headerbrown text-xl ml-2 mt-2 cursor-pointer" (click)="sortAscending.set(true)"></i>
+               }
+            </div>
+            
+            <ng-template #menu>               
+               <div class="inline-flex gap-1 flex-col min-w-[180px] max-w-[280px] bg-white" cdkMenu>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('title', 'Titel')">Titel</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('authors.0.lastName', 'Författare, efternamn')">Författare, efternamn</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('authors.0.firstName', 'Författare, förnamn')">Författare, förnamn</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('yearWritten', 'Utgivningsår')">Utgivningsår</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('createdAt', 'Tillagd')">Tillagd</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('isbn', 'ISBN')">ISBN</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('numberOfCopies', 'Antal')">Antal exemplar</button>
+                  <button class="example-menu-item" cdkMenuItem (click)="setSortOrder('rating', 'Betyg')">Betyg</button>
+               </div>
+            </ng-template>
+
          </div>
          <div class="flex items-center justify-center">
             <h5 class="text-3xl mr-5 text-headerbrown font-medium">filtrering</h5>
@@ -19,7 +43,7 @@
    </div>
 
    <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mt-5 overflow-scroll h-full">
-      @if (books$ | async; as books ) {
+      @if (booksFiltered$ | async; as books ) {
          @for (book of books; track book.id) {
             <app-book-card [book]="book"></app-book-card>
          }
