--- a/frontend/src/app/features/books/components/filter-list/filter-list.html
+++ b/frontend/src/app/features/books/components/filter-list/filter-list.html
@@ -6,32 +6,46 @@
    
    @if (filterBy().length > 0) {
       filtrering | 
-      @for (filter of filterBy(); track $index) {
-         {{ filter.displayString }}: {{ filter.filterString ?? '(Ej angivet)' }}@if ($index != filterBy().length -1) {,}
+      @let groups = groupFilters(filterBy()) | keyvalue;
+      @for (group of groups; track $index) {
+         {{ convertKeyToLabel(group.key) }}:
+         @for (value of group.value; track $index) {
+            {{ value ?? '(Ej angivet)' }}@if ($index != group.value.length -1) {,}
+         }
+         @if ($index != groups.length - 1) { |}
       }
+      <span class="underline text-lg ml-3" (click)="filterBy.set([])">Rensa filter</span>
    } @else {
       filtrering
    }
 </h5>
 
 <ng-template #filterMenu>
-   <div class="inline-flex gap-1 flex-col min-w-[180px] max-w-[280px] bg-white" cdkMenu>
-      @if (filterAlts() != '') {
-         <i class="fa-solid fa-arrow-left example-menu-item" (click)="filterAlts.set('')"></i>
+   <div class="inline-flex gap-1 flex-col min-w-[180px] max-w-[280px] bg-white overflow-y-scroll" cdkMenu>
+      @if (filterAlts().key != '') {
+         <i class="fa-solid fa-arrow-left example-menu-item" (click)="filterAlts.set({key: '', label: ''})"></i>
       }
 
-   @switch (filterAlts()) {
+   @switch (filterAlts().key) {
       @case ('') {
-         <button class="example-menu-item" (click)="filterAlts.set('format')">Format</button>
+         @for (option of filterOptions; track $index) {
+            <button class="example-menu-item" (click)="filterAlts.set({key: option.key, label: option.label})">{{ option.label }}</button>
+         }
       }
-      
-      @case ('format') {
-         @for (format of getChoosableFilterOptions('format'); track $index) {
-            <button class="example-menu-item" cdkMenuItem (click)="setFilter('format', format, 'format')">
-               @if (filterIsApplied(constructFilterObject('format', format, 'format'))) {
+
+      @case ('authors') {
+         <button class="example-menu-item" (click)="filterAlts.set({key: 'authorName', label: 'Författarnamn'})">Namn</button>
+         <button class="example-menu-item" (click)="filterAlts.set({key: 'authorGender', label: 'Författarkön'})">Kön</button>
+         <button class="example-menu-item" (click)="filterAlts.set({key: 'authorCountry', label: 'Författarland'})">Land</button>
+      }
+
+      @default {
+         @for (filter of getChoosableFilterOptions(stringToKeyof(filterAlts().key)); track $index) {
+            <button class="example-menu-item" (click)="setFilter(stringToKeyof(filterAlts().key), filter, stringToKeyof(filterAlts().label))">
+               @if (filterIsApplied(constructFilterObject(stringToKeyof(filterAlts().key), filter, filterAlts().label))) {
                   <i class="fa-solid fa-check mr-1"></i>
                }
-               {{ format }}
+               {{ filter }}
             </button>
          }
       }
