--- a/frontend/src/app/features/books/pages/all-books/all-books.html
+++ b/frontend/src/app/features/books/pages/all-books/all-books.html
@@ -33,23 +33,22 @@
          </div>
    
          <div class="flex items-center justify-center">
-            <app-filter-list [booksOriginal$]="booksOriginal$" [booksFiltered]="booksFiltered"></app-filter-list>
+            <app-filter-list [booksOriginal$]="booksOriginal$" [booksFiltered$]="booksFiltered$"></app-filter-list>
          </div>
       </div>
       <div>
-         <div class="rounded-full bg-[#EEE7D3] text-headerbrown p-3 w-100 -mt-10">
-            <i class="fa-solid fa-magnifying-glass ml-2"></i>
-            <input type="text" placeholder="SÖK BOK ELLER FÖRFATTARE" class="bg-transparent border-none outline-none w-8/10 ml-3" />
-         </div>
+         <app-search-bar [booksFiltered$]="booksFiltered$" [booksSearched$]="booksSearched$" />
          <div class="w-full mt-5 text-right text-xl">
             <p class="text-headerbrown">Antal böcker: {{ numberOfBooks() }}</p>
          </div>
       </div>
    </div>
 
-   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mt-8 overflow-scroll max-h-full">
-      @for (book of booksFiltered(); track book.id) {
-         <app-book-card [book]="book"></app-book-card>
+   <div class="grid grid-cols-1 sm:grid-cols-2 md:grid-cols-3 lg:grid-cols-5 gap-4 mt-8 overflow-scroll overflow-x-hidden max-h-full">
+      @if (booksSearched$ | async; as books ) {
+         @for (book of books; track book.id) {
+            <app-book-card [book]="book"></app-book-card>
+         }
       }
    </div>
 </div>
