--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -5,31 +5,45 @@
          <input type="text" name="bookTitle" formControlName="title" class="form-text-input">
          
          <label for="bookAuthors">Författare:</label>
-         <app-array-input formControlName="authors" [displayFn]="displayAuthor" [selectableItems]="allAuthors()"></app-array-input>
+         <div class="flex items-center">
+            <app-array-input formControlName="authors" [displayFn]="displayAuthor" [selectableItems]="allAuthors()" class="w-full"></app-array-input>
+            <i class="fa-solid fa-rotate ml-2 cursor-pointer active:rotate-180 active:transition-all" (click)="updateAuthorsList()"></i>
+         </div>
       
          <label for="genre">Genre:</label>
-         <select formControlName="genre" id="genre">
-            @for (genre of allGenres(); track genre.id) {
-               <option [ngValue]="genre.id">{{ genre.name }}</option>
-            }
-         </select>
+         <div class="flex items-center">
+            <select formControlName="genre" id="genre" class="w-full">
+               @for (genre of allGenres(); track genre.id) {
+                  <option [ngValue]="genre.id">{{ genre.name }}</option>
+               }
+            </select>
+            <i class="fa-solid fa-rotate ml-2 cursor-pointer active:rotate-180 active:transition-all" (click)="updateGenresList()"></i>
+         </div>
          
          <label for="yearWritten" class="self-center">Utgivningsår:</label>
          <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input">
       
          <label for="language">Språk:</label>
-         <select formControlName="language">
-            @for (language of allLanguages(); track language.id) {
-               <option [ngValue]="language.id">{{ language.name }}</option>
-            }
-         </select>
+         <div class="flex items-center">
+            <select formControlName="language" id="language" class="w-full">
+               @for (language of allLanguages(); track language.id) {
+                  <option [ngValue]="language.id">{{ language.name }}</option>
+               }
+            </select>
+            <i class="fa-solid fa-rotate ml-2 cursor-pointer active:rotate-180 active:transition-all" (click)="updateLanguagesList()"></i>
+         </div>
+      
       
          <label for="language">Originalspråk:</label>
-         <select formControlName="originalLanguage">
-            @for (language of allLanguages(); track language.id) {
-               <option [ngValue]="language.id">{{ language.name }}</option>
-            }
-         </select>
+         <div class="flex items-center">
+            <select formControlName="language" id="language" class="w-full">
+               @for (language of allLanguages(); track language.id) {
+                  <option [ngValue]="language.id">{{ language.name }}</option>
+               }
+            </select>
+            <i class="fa-solid fa-rotate ml-2 cursor-pointer active:rotate-180 active:transition-all" (click)="updateLanguagesList()"></i>
+         </div>
+      
          
          <label for="format">Format:</label>
          <select formControlName="format">
