--- a/frontend/src/app/shared/components/edit-panel/edit-panel.html
+++ b/frontend/src/app/shared/components/edit-panel/edit-panel.html
@@ -1,7 +1,7 @@
 <div (click)="closePanel()" class="fixed inset-0 bg-black opacity-50 z-40"></div>
 
 <div class="size-full fixed z-40 top-0 left-0 pointer-events-none flex justify-center items-center">
-   <div class="bg-backgroundbeige pointer-events-auto w-2/3 h-2/3 rounded-4xl">
+   <div class="bg-backgroundbeige pointer-events-auto w-2/3 h-2/3 rounded-4xl flex flex-col justify-center">
       <ng-content></ng-content>
    </div>
 </div>
