Lägg till rätt bokformat på lägg till och redigera (issue #110)

--- a/frontend/src/app/features/books/components/add-book/add-book.html
+++ b/frontend/src/app/features/books/components/add-book/add-book.html
@@ -71,10 +71,12 @@
          
          <label for="format">Format:</label>
          <select formControlName="format" id="format">
+            <option value="Danskt band">Danskt band</option>
+            <option value="Flexband">Flexband</option>
+            <option value="Häftad">Häftad</option>
             <option value="Inbunden">Inbunden</option>
             <option value="Pocket">Pocket</option>
-            <option value="Danskt band">Danskt band</option>
-            <option value="Häftad">Häftad</option>
+            <option value="Storpocket">Storpocket</option>
          </select>
       
          <label for="isbn" class="self-center">ISBN:</label>
