Ta bort skanna-knappen (issue #107)

--- a/frontend/src/app/features/header/components/header/header.html
+++ b/frontend/src/app/features/header/components/header/header.html
@@ -6,7 +6,7 @@
       </app-burger-menu>
       <a routerLink="/books" class="text-3xl text-backgroundbeige mr-30">BOKHYLLA</a>
       <a routerLink="/add" class="text-3xl text-backgroundbeige mr-30">LÄGG TILL</a>
-      <a routerLink="/scan" class="text-3xl text-backgroundbeige mr-30">SKANNA</a>
-      <a routerLink="/search" class="text-3xl text-backgroundbeige">SÖK</a>
+      <!-- <a routerLink="/scan" class="text-3xl text-backgroundbeige mr-30">SKANNA</a> -->
+      <!-- <a routerLink="/search" class="text-3xl text-backgroundbeige">SÖK</a> -->
    </div>
 </header>
