Lägg till routes till lägg till-vyer (issue #118)

--- a/frontend/src/app/features/header/components/header/header.html
+++ b/frontend/src/app/features/header/components/header/header.html
@@ -5,7 +5,7 @@
          <a routerLink="/books/deleted" class="text-2xl">Raderade böcker</a>
       </app-burger-menu>
       <a routerLink="/books" class="text-3xl text-backgroundbeige mr-30">BOKHYLLA</a>
-      <a routerLink="/add" class="text-3xl text-backgroundbeige mr-30">LÄGG TILL</a>
+      <a routerLink="/add" [queryParams]="{ resource: 'book' }" class="text-3xl text-backgroundbeige mr-30">LÄGG TILL</a>
       <!-- <a routerLink="/scan" class="text-3xl text-backgroundbeige mr-30">SKANNA</a> -->
       <!-- <a routerLink="/search" class="text-3xl text-backgroundbeige">SÖK</a> -->
    </div>
