--- a/frontend/src/app/shared/pages/add-view/add-view.html
+++ b/frontend/src/app/shared/pages/add-view/add-view.html
@@ -1,17 +1,33 @@
 <div class="flex items-center h-full">
    <div class="flex flex-col gap-10 w-50 bg-[#fefcf5] h-full justify-center">
-      <div (click)="selectedView.set('book')" class="p-5 hover:bg-backgroundbeige cursor-pointer">
+      <a 
+         [routerLink]="['/add']" 
+         [queryParams]="{ resource: 'book' }" 
+         class="p-5 hover:bg-backgroundbeige block cabin-font"
+      >
          <p>Bok</p>
-      </div>
-      <div (click)="selectedView.set('author')" class="p-5 hover:bg-backgroundbeige cursor-pointer">
+      </a>
+      <a 
+         [routerLink]="['/add']" 
+         [queryParams]="{ resource: 'author' }" 
+         class="p-5 hover:bg-backgroundbeige block cabin-font"
+      >
          <p>Författare</p>
-      </div>
-      <div (click)="selectedView.set('genre')" class="p-5 hover:bg-backgroundbeige cursor-pointer">
+      </a>
+      <a 
+         [routerLink]="['/add']" 
+         [queryParams]="{ resource: 'genre' }" 
+         class="p-5 hover:bg-backgroundbeige block cabin-font"
+      >
          <p>Genre</p>
-      </div>
-      <div (click)="selectedView.set('language')" class="p-5 hover:bg-backgroundbeige cursor-pointer">
+      </a>
+      <a 
+         [routerLink]="['/add']" 
+         [queryParams]="{ resource: 'language' }" 
+         class="p-5 hover:bg-backgroundbeige block cabin-font"
+      >
          <p>Språk</p>
-      </div>
+      </a>
    </div>
    
    @switch (selectedView()) {
