fixade feedback från copilot

--- a/frontend/src/app/features/authors/components/add-author/add-author.html
+++ b/frontend/src/app/features/authors/components/add-author/add-author.html
@@ -37,7 +37,7 @@
          <label for="country">Land:</label>
          <select formControlName="country" id="country">
             @for (country of allCountries(); track country.id) {
-               <option [ngValue]="country.id">{{ country.name }}</option>
+               <option [ngValue]="country">{{ country.name }}</option>
             }
          </select>
       
