lade till läser-status

--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -63,6 +63,7 @@
             <option [value]="null" disabled>Välj status...</option>
             <option value="Läst">Läst</option>
             <option value="Ej läst">Ej läst</option>
+            <option value="Läser">Läser</option>
             <option value="Utlånad">Utlånad</option>
          </select>
       
