Fixa dubbla relaterade böcker (issue #147)

--- a/frontend/src/app/features/books/pages/book-page/book-page.html
+++ b/frontend/src/app/features/books/pages/book-page/book-page.html
@@ -37,24 +37,19 @@
          </div>
       
          <div class="h-full overflow-hidden">
-            
-            @if (booksByAuthor()) {
-               @if (booksByAuthor().length > book.authors.length) {
-                  <div class="flex flex-col h-full w-full overflow-auto min-h-0 mt-45">
-                     <h5 class="text-2xl mb-5 uppercase">
-                     @if (book.authors.length == 1) {
-                        Mer av {{ book.authors[0].firstName}} {{ book.authors[0].lastName }}:
-                     } @else {
-                        Mer av dessa författare:
-                     }
-                     </h5>
-                  @for (bookInList of booksByAuthor(); track $index) {
-                     @if (bookInList.title != book.title) {
-                        <app-book-card [book]="bookInList" class=""></app-book-card>
-                     }
+            @if (booksByAuthor().length) {
+               <div class="flex flex-col h-full w-full overflow-auto min-h-0 mt-45">
+                  <h5 class="text-2xl mb-5 uppercase">
+                  @if (book.authors.length == 1) {
+                     Mer av {{ book.authors[0].firstName}} {{ book.authors[0].lastName }}:
+                  } @else {
+                     Mer av dessa författare:
                   }
-                  </div>
+                  </h5>
+               @for (bookInList of booksByAuthor(); track bookInList.id) {
+                  <app-book-card [book]="bookInList" class=""></app-book-card>
                }
+               </div>
             }
          </div>
       </div>
