--- a/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
+++ b/frontend/src/app/features/books/components/edit-book-form/edit-book-form.html
@@ -3,12 +3,22 @@
       <div class="grid grid-cols-[auto_75%] gap-y-2 gap-x-5 [&>label]:justify-self-end">
          <label for="bookTitle" class="self-center">Titel:</label>
          <input type="text" name="bookTitle" formControlName="title" class="form-text-input">
+         @if (form.get('title')?.invalid && formIsSubmitted) {
+            @if (form.get('title')?.errors?.['required']) {
+               <div></div>
+               <span class="text-red-500">Titel är obligatorisk.</span>
+            }
+         }
          
          <label for="bookAuthors">Författare:</label>
          <div class="flex items-center">
             <app-array-input formControlName="authors" [displayFn]="displayAuthor" [selectableItems]="allAuthors()" class="w-full" defaultSelectText="Välj författare..."></app-array-input>
             <i class="fa-solid fa-rotate ml-2 cursor-pointer active:rotate-180 active:transition-all" (click)="updateAuthorsList()"></i>
          </div>
+         @if (form.get('authors')?.invalid && formIsSubmitted) {
+            <div></div>
+            <span class="text-red-500">Du måste välja minst en författare.</span>
+         }
       
          <label for="genre">Genre:</label>
          <div class="flex items-center">
@@ -22,6 +32,12 @@
          
          <label for="yearWritten" class="self-center">Utgivningsår:</label>
          <input type="number" formControlName="yearWritten" [max]="this.getCurrentYear()" class="form-text-input">
+         @if (form.get('yearWritten')?.invalid) {
+            @if (form.get('yearWritten')?.errors?.['max']) {
+               <div></div>
+               <span class="text-red-500">Året kan inte vara i framtiden.</span>
+            }
+         }
       
          <label for="language">Språk:</label>
          <div class="flex items-center">
@@ -57,6 +73,12 @@
       
          <label for="isbn" class="self-center">ISBN:</label>
          <input formControlName="isbn" class="form-text-input" >
+         @if (form.get('isbn')?.invalid && formIsSubmitted) {
+            @if (form.get('isbn')?.errors?.['pattern']) {
+               <div></div>
+               <span class="text-red-500">ISBN får inte innehålla bokstäver.</span>
+            }
+         }
       
          <label for="status">Status:</label>
          <select formControlName="status">
